# EventBoardAgent

./: .claude.json  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  gaming_events_scraper.ipynb  main.py  project_spec.md  pyproject.toml  render.yaml  requirements.txt  setup_terminals.sh  start.sh
.claude/: multi-agent-template.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  ci.yml  infra.yml  migrate-prod.yml  migrate-qa.yml
alembic/: env.py
alembic/versions/: 20260301_0001_initial_schema.py
backend/: auth.py  crud.py  database.py  databridge.py  importer.py  main.py  models.py  newsletter.py  requirements.txt  schemas.py
backend/api/: admin.py  events.py  games.py  locations.py  subscriptions.py
backend/data/: sample_events.json  test_events_feb2026.json
backend/tests/: test_deduplication.py  test_preview_email.py
demo_events_data/: demo_events.json
docs/plans/: 2026-02-27-preview-email-endpoint-design.md  2026-02-27-preview-email-endpoint.md  2026-02-27-preview-email-redesign-design.md  2026-02-27-preview-email-redesign.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: AuthButton.jsx  CalendarView.jsx  EventCard.jsx  EventList.jsx  FilterBar.jsx  RequireAdmin.jsx  RequireAuth.jsx  SubscribeForm.jsx  SubscribeModal.jsx
frontend/src/hooks/: useAuthAxios.js  useIsAdmin.js
frontend/src/pages/: AdminReviewPanel.jsx  GameSystemPage.jsx  Home.jsx  LocationPage.jsx  StorePage.jsx  SubmitEventPage.jsx
scripts/: send_newsletter.py
src/gaming_events_scraper/: __init__.py  discord_scraper.py  extractors.py  facebook_scraper.py  models.py  scraper.py  storage.py
terraform/: backend.hcl.example  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_discord_scraper.py  test_extractors.py  test_facebook_scraper.py  test_models.py  test_scraper.py  test_storage.py
